0025631: Bounding box is too big for the face.

Fixed start and finish indexes of poles in case of trimmed bspline surface.

Test case for issue CR25631